# cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/tests/: release-workflow-state-machine.py
.github/workflows/: release-workflow-validation.yml  release.yml  tests.yml
src/amara_cli/: completions.py  config.py  main.py
src/amara_cli/commands/: cluster.py  completions.py  config_cmd.py  connect.py  env.py  k8s.py  login.py  setup.py  update.py
src/heyamara_cli/: completions.py  config.py  helpers.py  loki.py  main.py  prompts.py  release_version.py  secret_files.py  tunnel.py  version_check.py
src/heyamara_cli/commands/: cluster.py  config_cmd.py  connect.py  db.py  env.py  k8s.py  login.py  search.py  setup.py  update.py
tests/: test_config_security.py  test_db_psql_credentials.py  test_env_secret_outputs.py  test_release_version.py  test_secret_file_writes.py
